<resources>
    <string name="app_name">Verifica IP Externo</string>
    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre</string>
    <string name="main_activity_label_ultima_verificacao">Última verificação:</string>
    <string name="main_activity_label_ultimo_ipv4">Último IPv4:</string>
    <string name="main_activity_botao_parar">PARAR</string>
    <string name="main_activity_botao_iniciar">INICIAR</string>
    <string name="main_activity_label_intervalo">Intervalo de verificação (minutos)</string>
    <string name="title_activity_configuracoes">Configurações</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
