<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:locale="pt-BR"
    tools:showIn="@layout/activity_main">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteY="56dp">

        <TextView
            android:id="@+id/label_ultima_verificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_label_ultima_verificacao"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_ultima_verificacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ultimaVerificacao}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/label_ultima_verificacao"
            app:layout_constraintTop_toBottomOf="@+id/label_ultima_verificacao"
            tools:text="14/09/2019 17:46:35" />

        <TextView
            android:id="@+id/label_ultimo_ipv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/main_activity_label_ultimo_ipv4"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/text_ultima_verificacao"
            app:layout_constraintTop_toBottomOf="@+id/text_ultima_verificacao" />

        <TextView
            android:id="@+id/text_ultimo_ipv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{ultimoIpv4}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/label_ultimo_ipv4"
            app:layout_constraintTop_toBottomOf="@+id/label_ultimo_ipv4"
            tools:text="200.95.213.101" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao_parar"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:enabled="@{flagEmExecucao}"
            android:onClick="onClickParar"
            android:text="@string/main_activity_botao_parar"
            app:icon="@drawable/ic_stop_white_24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/botao_iniciar"
            app:layout_constraintEnd_toStartOf="@+id/botao_iniciar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/botao_iniciar"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:enabled="@{!flagEmExecucao}"
            android:onClick="onClickIniciar"
            android:text="@string/main_activity_botao_iniciar"
            app:icon="@drawable/ic_play_arrow_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/botao_parar"
            app:layout_constraintTop_toBottomOf="@+id/label_input_intervalo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_input_intervalo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/main_activity_label_intervalo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ultimo_ipv4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_minutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:text="@{intervaloVerificacao.toString()}" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="flagEmExecucao"
            type="boolean" />

        <variable
            name="ultimoIpv4"
            type="String" />

        <variable
            name="ultimaVerificacao"
            type="String" />

        <variable
            name="intervaloVerificacao"
            type="Integer" />
    </data>
</layout>